src/test/ui/parser/issue-19398.stderr
error: expected `fn`, found keyword `unsafe`
  --> $DIR/issue-19398.rs:2:19
   |
LL |     extern "Rust" unsafe fn foo();
   |                   ^^^^^^ expected `fn`

error: aborting due to previous error

