src/test/ui/parser/issue-19398.rs
trait T {
    extern "Rust" unsafe fn foo(); //~ ERROR expected one of `async`, `const`
}

fn main() {}
